# binom

./: CMakeLists.txt  README.md
include/: binom.h
src/: binom_test.cpp
